sample_data/00b/00b70746a8be5f4f9ca8ae630ac0d828d903dbb5
D:\dev\Accessadoor\Button\Main\Main.ino: In function 'void esp_gap_cb(esp_gap_ble_cb_event_t, esp_ble_gap_cb_param_t*)':

Main:238: error: cannot convert 'bool' to 'esp_ble_addr_type_t' for argument '3' to 'esp_err_t esp_ble_gattc_open(esp_gatt_if_t, uint8_t*, esp_ble_addr_type_t, bool)'

                         esp_ble_gattc_open(test_profile.gattc_if, scan_result->scan_rst.bda, true);

                                                                                                  ^

D:\dev\Accessadoor\Button\Main\Main.ino: In function 'void gattc_client_test()':

Main:319: error: 'esp_bluedroid_init' was not declared in this scope

     esp_bluedroid_init();

                        ^

Main:320: error: 'esp_bluedroid_enable' was not declared in this scope

     esp_bluedroid_enable();

                          ^

exit status 1
cannot convert 'bool' to 'esp_ble_addr_type_t' for argument '3' to 'esp_err_t esp_ble_gattc_open(esp_gatt_if_t, uint8_t*, esp_ble_addr_type_t, bool)'